# brainstorm

./: Cargo.toml  README.md
assets/birds/: big_chonker.ron  bluebird.ron  canada_goose.ron  magpie.ron  swallow.ron  swallow_long.ron
assets/birds/droppings/: bird.ron  seeds.ron
assets/levels/: level1.ron  test.ron
assets/players/: boy.ron
src/: bird.rs  level.rs  main.rs  menu.rs  pause.rs  physics.rs  player.rs  projectile.rs  splash.rs
src/bird/: asset.rs  dropping.rs  mod.rs  spawner.rs
src/level/: mod.rs
src/ui/: game_over.rs  main_menu.rs  mod.rs  pause.rs  settings.rs  splash.rs
src/util/: animation.rs  asset_manager.rs  mod.rs  ron_asset_loader.rs  transform_interpolation.rs
