[package]
name = "brainstorm"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.16.0", features = ["file_watcher"] }
clap = { version = "4.5.32", features = ["derive"] }
rand = "0.9.0"
ron = "0.8.1"
serde = "1.0.219"

# Enable a small amount of optimisation in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimisation in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
